# field_phone

./: .gitignore  README.md  build_phonetic_class.js
backend/: pyproject.toml  requirements.txt
backend/fieldphone/: __init__.py  config.py  database.py  main.py
backend/fieldphone/api/: audit.py  classifier.py  ingestion.py  query.py  router.py  speakers.py  tone.py  transcription.py
backend/fieldphone/models/: __init__.py  audit.py  script.py  session.py  speaker.py  token.py  transcription.py
backend/fieldphone/schemas/: __init__.py  audit.py  classifier.py  ingestion.py  query.py  tone.py  transcription.py
backend/fieldphone/services/: consistency.py  deviation_detector.py  divergence.py  f0_extraction.py  formant_extraction.py  orthography.py  phonetic_classes.py  query_parser.py  segmentation.py  shorthand.py  speaker_normalization.py  tone_analysis.py  vowel_classifier.py
configs/: phonetic_classes.example.yaml  shorthand.example.yaml
frontend/: config.js  index.html  login.html  package-lock.json  package.json  tsconfig.tsbuildinfo  upload.html  vite.config.ts
frontend/css/: style.css
frontend/js/: auth.js  player.js  search.js  supabase-client.js  upload.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useAudioPlayer.ts  useQuery.ts
frontend/src/pages/: AuditPage.tsx  IngestPage.tsx  QueryPage.tsx  TonePage.tsx  TranscribePage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: phonetics.ts  shorthand.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial.sql
(+21 files in other folders)
